backend/static/css/sp-theme.css
/* ... */
[data-bs-theme=dark] {
	/* SocialPass turquoise */

	--sp-turquoise-text-emphasis-hsl: var(--sp-turquoise-400-hsl);
	--sp-turquoise-text-emphasis: hsl(var(--sp-turquoise-text-emphasis-hsl));
	--sp-turquoise-bg-subtle: hsl(var(--sp-turquoise-hue), calc(var(--sp-turquoise-saturation)/3), 15%);
	--sp-turquoise-border-subtle: var(--sp-turquoise-600);

	/* SocialPass orange */

	--sp-orange-text-emphasis-hsl: var(--sp-orange-400-hsl);
	--sp-orange-text-emphasis: hsl(var(--sp-orange-text-emphasis-hsl));
	--sp-orange-bg-subtle: hsl(var(--sp-orange-hue), calc(var(--sp-orange-saturation)/3), 15%);
	--sp-orange-border-subtle: var(--sp-orange-600);

	/* Primary */

	--bs-primary-text-emphasis-hsl: var(--sp-turquoise-text-emphasis-hsl);
	--bs-primary-text-emphasis: var(--sp-turquoise-text-emphasis);
	--bs-primary-bg-subtle: var(--sp-turquoise-bg-subtle);
	--bs-primary-border-subtle: var(--sp-turquoise-border-subtle);

	/* Info */

	--bs-info-text-emphasis-hsl: var(--sp-orange-text-emphasis-hsl);
	--bs-info-text-emphasis: var(--sp-orange-text-emphasis);
	--bs-info-bg-subtle: var(--sp-orange-bg-subtle);
	--bs-info-border-subtle: var(--sp-orange-border-subtle);
}

/**
 * ----------------------------------------------------------------------------
 * [ Variables ]
 * ----------------------------------------------------------------------------
 */

@font-face {
	font-family: "Averta";
	src: url("../fonts/AvertaRegular.otf");
	font-weight: normal;
}

@font-face {
	font-family: "Averta";
	src: url("../fonts/AvertaBold.otf");
	font-weight: bold;
}

:root,
[data-bs-theme=light] {
	/* Font family */

	--bs-font-sans-serif: "Averta", sans-serif;

	/* Font size */

	--bs-font-size-base: 1rem;
	--bs-font-size-sm: 0.875rem;
	--bs-font-size-lg: 1.125rem;
	--bs-relative-font-size-sm: 0.875em; 	/* 14px */
	--bs-relative-font-size-xs: 0.75em; 	/* 12px */
	--bs-relative-font-size-2xs: 0.625em; 	/* 10px */
	--bs-relative-font-size-3xs: 0.5em; 	/* 8px */
	--bs-relative-font-size-4xs: 0.375em; 	/* 6px */
	--bs-relative-font-size-5xs: 0.25em; 	/* 4px */
	--bs-relative-font-size-6xs: 0.125em; 	/* 2px */
	--bs-relative-font-size-7xs: 0.075em; 	/* 1px */

	/* Action (used as needed in buttons, inputs, menu items, page links, etc.) */

	--bs-action-padding-x: 0.625rem;
	--bs-action-padding-y: 0.375rem;
	--bs-action-sm-padding-x: 0.5rem;
	--bs-action-sm-padding-y: 0.25rem;
	--bs-action-lg-padding-x: 0.75rem;
	--bs-action-lg-padding-y: 0.5rem;

	/* Form */

	--bs-form-focus-border-color: var(--bs-primary-border-subtle);
	--bs-form-check-focus-border-color: var(--bs-primary-border-subtle);
}

[data-bs-theme=dark] {
	/* Action (used as needed in buttons, inputs, menu items, page links, etc.) */

	--bs-action-border-color: var(--bs-border-color);

	/* Contextual buttons */

	--bs-ctx-btn-border-color: transparent;
	--bs-ctx-btn-bg-clip: border-box;
}

/**
 * ----------------------------------------------------------------------------
 * [ Buttons ]
 * ----------------------------------------------------------------------------
 */

.btn {
	font-weight: bold;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.btn-link,
.btn-link:hover,
.btn-link:active,
.btn-link:focus-visible {
	background-color: var(--bs-primary-bg-subtle) !important;
	border: var(--bs-border-width) solid hsla(var(--bs-primary-hsl), 0.25) !important;
	text-decoration: none;
}

/**
 * ----------------------------------------------------------------------------
 * [ Form ]
 * ----------------------------------------------------------------------------
 */

/* Floating labels */

.form-floating > .form-control,
.form-floating > .form-control-plaintext,
.form-floating > .form-select {
	padding-top: 1.625rem;
	padding-bottom: 0.625rem;
}

.form-floating > .form-control::-moz-placeholder,
.form-floating > .form-control-plaintext::-moz-placeholder {
	color: var(--bs-tertiary-color);
}

.form-floating > .form-control::placeholder,
.form-floating > .form-control-plaintext::placeholder {
	color: var(--bs-tertiary-color);
}

.form-floating > .form-control ~ label,
.form-floating > .form-control-plaintext ~ label,
.form-floating > .form-select ~ label {
	color: var(--bs-secondary-color) !important;
	transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem) !important;
}

.form-floating > .form-control:-webkit-autofill ~ label {
	color: var(--bs-secondary-color) !important;
	transform: scale(0.85) translateY(-0.75rem) translateX(0.15rem) !important;
}

/**
 * ----------------------------------------------------------------------------
 * [ Dropdowns ]
 * ----------------------------------------------------------------------------
 */

.dropdown-menu {
	border: 0;
}

